########################################################################
#                                                                      #
#    Author of Makefile.am: Andrej Prsa <andrej.prsa@fmf.uni-lj.si>    #
#                                                                      #
########################################################################
#                                                                      #
# This program is free software; you can redistribute it and/or modify #
# it under the terms of the GNU General Public License as published by #
# the Free Software Foundation; either version 2, or (at your option)  #
# any later version.                                                   #
#                                                                      #
# This program is distributed in the hope that it will be useful,      #
# but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        #
# GNU General Public License for more details.                         #
#                                                                      #
# You should have received a copy of the GNU General Public License    #
# along with this program; if not, write to the Free Software          #
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.            #
#                                                                      #
########################################################################

guigladedir = $(datarootdir)/phoebe/gui/glade
guiglade_DATA = phoebe_about.glade                \
                phoebe_cormat.glade               \
                phoebe_cairo.glade                \
                phoebe_import_bm3.glade           \
                phoebe_lc_coefficients.glade      \
                phoebe_ld_interpolator.glade	  \
                phoebe_levels.glade               \
                phoebe_load_lc.glade              \
                phoebe_load_rv.glade              \
                phoebe_load_spots.glade           \
                phoebe_potential_calculator.glade \
                phoebe_settings.glade             \
                phoebe_third_light.glade          \
                phoebe_weighting.glade

EXTRA_DIST = $(guiglade_DATA)

