########################################################################
#                                                                      #
#    Author of Makefile.am: Andrej Prsa <andrej.prsa@fmf.uni-lj.si>    #
#                                                                      #
########################################################################
#                                                                      #
# This program is free software; you can redistribute it and/or modify #
# it under the terms of the GNU General Public License as published by #
# the Free Software Foundation; either version 2, or (at your option)  #
# any later version.                                                   #
#                                                                      #
# This program is distributed in the hope that it will be useful,      #
# but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        #
# GNU General Public License for more details.                         #
#                                                                      #
# You should have received a copy of the GNU General Public License    #
# along with this program; if not, write to the Free Software          #
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.            #
#                                                                      #
########################################################################

phoebeptfdir = $(datarootdir)/phoebe/ptf
phoebeptf_DATA = bessell_1988_h.txt          \
                 bessell_1988_j.txt          \
                 bessell_1988_k.txt          \
                 bessell_1988_lprime.txt     \
                 bessell_1988_l.txt          \
                 bessell_1988_m.txt          \
                 bolometric.ptf              \
                 cousins.R                   \
                 cousins.I                   \
                 geneva_1962_b1.txt          \
                 geneva_1962_b2.txt          \
                 geneva_1962_b.txt           \
                 geneva_1962_g.txt           \
                 geneva_1962_u.txt           \
                 geneva_1962_v1.txt          \
                 geneva_1962_v.txt           \
                 hipparcos_1989_bt.txt       \
                 hipparcos_1989_hp.txt       \
                 hipparcos_1989_vt.txt       \
                 hst_foc_1989_f48_f140w.txt  \
                 hst_foc_1989_f48_f150w.txt  \
                 hst_foc_1989_f48_f175w.txt  \
                 hst_foc_1989_f48_f195w.txt  \
                 hst_foc_1989_f48_f220w.txt  \
                 hst_foc_1989_f48_f275w.txt  \
                 hst_foc_1989_f48_f342w.txt  \
                 hst_foc_1989_f48_f430w.txt  \
                 hst_foc_1989_f96_f120m.txt  \
                 hst_foc_1989_f96_f130m.txt  \
                 hst_foc_1989_f96_f140m.txt  \
                 hst_foc_1989_f96_f140w.txt  \
                 hst_foc_1989_f96_f152m.txt  \
                 hst_foc_1989_f96_f165w.txt  \
                 hst_foc_1989_f96_f170m.txt  \
                 hst_foc_1989_f96_f175w.txt  \
                 hst_foc_1989_f96_f190m.txt  \
                 hst_foc_1989_f96_f195w.txt  \
                 hst_foc_1989_f96_f210m.txt  \
                 hst_foc_1989_f96_f220w.txt  \
                 hst_foc_1989_f96_f231m.txt  \
                 hst_foc_1989_f96_f235m.txt  \
                 hst_foc_1989_f96_f275w.txt  \
                 hst_foc_1989_f96_f278m.txt  \
                 hst_foc_1989_f96_f307m.txt  \
                 hst_foc_1989_f96_f320w.txt  \
                 hst_foc_1989_f96_f342w.txt  \
                 hst_foc_1989_f96_f346m.txt  \
                 hst_foc_1989_f96_f372m.txt  \
                 hst_foc_1989_f96_f410m.txt  \
                 hst_foc_1989_f96_f430w.txt  \
                 hst_foc_1989_f96_f437M.txt  \
                 hst_foc_1989_f96_f470m.txt  \
                 hst_foc_1989_f96_f486n.txt  \
                 hst_foc_1989_f96_f501n.txt  \
                 hst_foc_1989_f96_f502m.txt  \
                 hst_foc_1989_f96_f550m.txt  \
                 hst_foc_1989_f96_f600m.txt  \
                 hst_foc_1989_f96_f630m.txt  \
                 johnson.U                   \
                 johnson.B                   \
                 johnson.V                   \
                 johnson.R                   \
                 johnson.I                   \
                 johnson.J                   \
                 johnson.H                   \
                 johnson.K                   \
                 johnson.L                   \
                 johnson.M                   \
                 johnson.N                   \
                 kepler_mean.ptf             \
                 sdss_u.txt                  \
                 sdss_g.txt                  \
                 sdss_r.txt                  \
                 sdss_i.txt                  \
                 sdss_z.txt                  \
                 stromgren_1956_b.txt        \
                 stromgren_1956_hbnarrow.txt \
                 stromgren_1956_hbwide.txt   \
                 stromgren_1956_u.txt        \
                 stromgren_1956_v.txt        \
                 stromgren_1956_y.txt

EXTRA_DIST = $(phoebeptf_DATA)
